--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 {
-    // Instructions:
-    //  * Replace My_Project with the name of your smart contract project
-    "name": "My_Project",
-    "workspaceMount": "type=volume,src=My_Project,dst=/root/eos",
-    "runArgs": ["--name=My_Project"],
+    // Optional Instructions:
+    //  * Replace ${localWorkspaceFolderBasename} with the name of your smart contract project
+    "name": "${localWorkspaceFolderBasename}",
+    "workspaceMount": "type=volume,src=${localWorkspaceFolderBasename},dst=/root/eos",
+    "runArgs": ["--name=${localWorkspaceFolderBasename}"],
 
     ///////////////////////////////////////
     // NO NEED TO MODIFY BELOW THIS LINE //
